--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,7 +34,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
 #         - { path: ^/admin, roles: ROLE_ADMIN }
-#         - { path: ^/profile, roles: [ROLE_ADMIN, ROLE_USER] }
+#         - { path: ^/Profile, roles: [ROLE_ADMIN, ROLE_USER] }
 #         - { path: ^/Courrier, roles: [ROLE_ADMIN, ROLE_USER] }
 #         - { path: ^/Direction, roles: [ROLE_ADMIN, ROLE_USER] }
 #         - { path: ^/document, roles: [ROLE_ADMIN, ROLE_USER] }
