--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,7 @@ parameters:
     locale: 'fr'
     upload_directory: '%kernel.project_dir%/public/uploads'
     app.path.product_images: /uploads/images/products
+    upload_images_users_directory: '%kernel.project_dir%/public/uploads/images/users'
 
 services:
     # default configuration for services in *this* file
